Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-15572

Interop sanity-flr failing with "cannot get UNLOCK lease"

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Blocker Blocker
    • Lustre 2.15.0
    • Lustre 2.15.0, Lustre 2.15.1
    • None
    • 3
    • 9223372036854775807

      Running sanity-flr in interop mode fails a number of subtests:
      https://testing.whamcloud.com/test_sets/0a29fd64-d2e6-4cbf-b636-b1deae709128

      lfs mirror: cannot get UNLOCK lease, ext 8: Device or resource busy (16)
      

            bobijam Zhenyu Xu
            adilger Andreas Dilger
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: